src/test/deca/context/valid/decaObjet/emptyClass/04assignation.deca
class A {
    
}
{
    A a;
    a = new A();
}