src/test/deca/context/invalid/intermediaire2/printx/00printx.deca
{
    printx(0x1FFFFFEp0);
}